[FIX] web_editor: fix sidebar overflow issue
Step to reproduce:
- Set the odoo backend language to spanish (tested in V16.0)
- Go to edit mode
- Drop "Text-Image" snippet.
- Click on Image from dropped snippet.
- Bug: The sidebar "Layout" menu overflows, there is a horizontal
  scrollbar.

Issue:
There was an issue with the dynamic width of the we-buttons within the
button group. The text in the "Layout" options was overflowing, causing
the sidebar to overflow.

Solution:
We have improved the CSS, and now if the button text is too long, it
will be truncated and display an ellipsis.

task-4378522

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -1169,6 +1169,7 @@
             we-selection-items {
                 display: flex;
                 max-width: 100%;
+                flex-grow: 1;
 
                 we-button {
                     padding: 0 $o-we-sidebar-content-field-button-group-button-spacing;
@@ -1578,6 +1579,17 @@
                     min-width: auto; // ... except for these ones
                 }
             }
+            &:has(div > we-button-group + we-select.o_grid) {
+                div {
+                    flex-grow: 1;
+                    we-button-group {
+                        min-width: 0 !important;
+                        we-button {
+                            width: 50%;
+                        }
+                    }
+                }
+            }
 
             > div {
                 display: flex;
@@ -1629,6 +1641,7 @@
             &:not(.o_we_fw) {
                 flex-flow: row nowrap;
                 align-items: center;
+                flex-grow: 1;
 
                 > we-title {
                     flex: 0 0 auto;
@@ -2593,16 +2606,12 @@ we-button:hover .o_we_shape_animated_label > span {
 
 // GRID LAYOUT
 we-button.o_grid {
-    min-width: fit-content;
+    flex: 1 !important;
     padding-left: 4.5px !important;
     padding-right: 4.5px !important;
 }
 
 we-select.o_grid we-toggler {
-    width: fit-content !important;
-}
-
-we-button-group.o_grid we-selection-items {
     width: fit-content !important;
 }
 
